Added changes according to second reccomendation

--- a/submissions/justdevway/html5-form/src/scss/components/login.scss
+++ b/submissions/justdevway/html5-form/src/scss/components/login.scss
@@ -120,7 +120,7 @@
     }
 
     @media only screen and (max-width: $mobile) {
-      flex: 1 0 auto;
+      flex: 1 0 100%;
       margin: 0;
     }
   }
