--- a/submissions/justdevway/html5-form/src/scss/components/range.scss
+++ b/submissions/justdevway/html5-form/src/scss/components/range.scss
@@ -3,6 +3,7 @@
   &__input {
     position: relative;
     width: 100%;
+    height: 8px;
     margin: 0;
     -webkit-appearance: none;
     background: transparent;
@@ -15,7 +16,6 @@
     &::-ms-track {
       width: 100%;
       cursor: pointer;
-
       background: transparent;
       border-color: transparent;
       color: transparent;
@@ -44,7 +44,7 @@
       z-index: 5;
       height: 20px;
       width: 20px;
-      margin-top: -5px;
+      margin-top: -6px;
       border-radius: 50%;
       background: var(--lightgreen);
       cursor: pointer;
@@ -88,7 +88,7 @@
     &:after {
       content: '';
       position: absolute;
-      top: 0;
+      top: -1px;
       width: 10px;
       height: 10px;
       border-radius: 50%;
