--- a/submissions/IrynaY/html5-form/app/style/_order.scss
+++ b/submissions/IrynaY/html5-form/app/style/_order.scss
@@ -94,6 +94,12 @@ input[name="translate-type"]:checked + label {
     opacity: 0;
 }
 
+#file-upload:focus + label{
+    outline-color: -webkit-focus-ring-color;
+    outline-style: auto;
+    outline-width: 5px;
+}
+
 .file-container{
     position: relative;
 }
