fix focused elements order

--- a/submissions/Aldegid/google-style-popup/app/sass/main.sass
+++ b/submissions/Aldegid/google-style-popup/app/sass/main.sass
@@ -58,6 +58,7 @@ body
 
 .popup__icon
 	background-image: url(../img/mnu.png)
+	display: block
 	width: 30px
 	height: 30px
 	background-repeat: no-repeat
