--- a/submissions/IrynaY/html5-form/app/style/_order-bottom.scss
+++ b/submissions/IrynaY/html5-form/app/style/_order-bottom.scss
@@ -4,13 +4,13 @@
     align-items: center;
     padding: 50px 90px 50px 130px;
     flex-wrap: wrap;
+
+    @media screen and (max-width: 768px) {
+        padding: 10px;
+        flex-direction: column;
+    }
 }
 
 .order-bottom .link{
     @extend %defaultLink;
-}
-
-.order-bottom .order-btn {
-    margin-left: 40px;
-    margin-right: 20px;
 }
