--- a/submissions/IrynaY/html5-form/app/style/_general.scss
+++ b/submissions/IrynaY/html5-form/app/style/_general.scss
@@ -23,6 +23,10 @@ fieldset{
     padding: 50px 90px 10px 130px;
     position: relative;
     margin: 0;
+
+    @media screen and (max-width: 425px) {
+        padding: 10px;
+    }
 }
 
 fieldset h2::before {
@@ -38,6 +42,14 @@ fieldset h2::before {
     text-align: center;
     line-height: 40px;
     position: absolute;
+
+    @media screen and (max-width: 425px) {
+        position: relative;
+        top:0;
+        left: 0;
+        width: 25px;
+        line-height: 25px;
+    }
 }
 
 .custom-select {
@@ -51,7 +63,7 @@ fieldset h2::before {
     @include defaultBorder();
     display: inline-block;
     height: 100%;
-    padding: 18px 100px 16px 50px;
+    padding: 20px 100px 20px 50px;
     -webkit-appearance: none;
     color: $gray2;
     font-weight: 400;
@@ -66,7 +78,7 @@ fieldset h2::before {
 }
 
 .custom-select::after{
-    padding: 19px;
+    padding: 20px;
     right: 0;
     top: 0;
     content: "\25BC";
@@ -83,4 +95,58 @@ fieldset h2::before {
     background-position: center;
     background-size: 22px;
     background-image: url("../img/waste-bin.png");
+    @media screen and (max-width: 425px) {
+        background-size: 14px;
+        padding: 9px;
+    }
 }
+
+@media screen and (max-width: 425px) {
+    body{
+        font-size: 10px;
+    }
+
+    fieldset h2 {
+        text-align: center;
+    }
+    input{
+        max-width: 230px;
+    }
+
+    table {
+        border: 0;
+    }
+
+    table thead {
+        border: none;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        width: 1px;
+    }
+
+    table tr {
+        border-bottom: 3px solid $gray1;
+        display: block;
+        margin-bottom: .625em;
+    }
+
+    table td {
+        border-bottom: 1px solid $gray1;
+        display: block;
+        font-size: .8em;
+        text-align: right;
+    }
+
+    table td::before {
+        content: attr(data-label);
+        float: left;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    table td:last-child {
+        border-bottom: 0;
+    }
+}
+
