--- a/submissions/patrofimov/html5-form/css/styles.css
+++ b/submissions/patrofimov/html5-form/css/styles.css
@@ -28,7 +28,7 @@ h1 {
 
 .document_header {
   max-width: 1140px;
-  margin: 40px auto 0 auto;
+  margin: 20px auto 0 auto;
   padding: 0 15px;
   box-sizing: content-box;
 }
@@ -46,6 +46,7 @@ h1 {
   border: 2px solid #c9d0e1;
   background: #eceef4;
   width: 171px;
+  white-space: nowrap;
   color: #a5abc5;
   padding: 0 50px 0 43px;
   line-height: 50px;
@@ -69,7 +70,7 @@ h1 {
 .main {
   padding: 10px;
   max-width: 1170px;
-  margin: 60px auto;
+  margin: 8px auto 60px auto;
   overflow: hidden;
 }
 
@@ -118,7 +119,7 @@ h1 {
 }
 
 .order_wrapper {
-  flex-basis: 551px;
+ flex-basis: 470px;
   margin: 20px 0 20px 30px;
 }
 
@@ -153,7 +154,7 @@ h1 {
   flex-basis: 100%;
   font-weight: 400;
   text-transform: uppercase;
-  margin: 65px auto;
+  margin: 0px auto 35px auto;
   line-height: 1.2;
 }
 
@@ -203,6 +204,7 @@ fieldset {
 
 .translate_select {
   position: relative;
+  display:inline-block;
 }
 
 .visually-hidden {
@@ -216,7 +218,7 @@ fieldset {
 .translate_figure {
   display: inline-block;
   background: #f7f7f9;
-  padding: 20px 80px;
+  padding: 20px 40px;
   border: 1px solid #dadae3;
   margin: 15px;
   min-width: 156px;
@@ -896,7 +898,7 @@ summary {
 .lang_select-wrapper:active,
 .tone_input:active + label,
 .required-input:active + label,
-.translate_input:active + figure,
+.translate_input:active + label,
 .upload-table_btn:active,
 .lang_btn:active {
   background-color: orange;
@@ -908,7 +910,7 @@ summary {
 .lang_select-wrapper:hover,
 .tone_input:hover + label,
 .required-input:hover + label,
-.translate_input:hover + figure,
+.translate_input:hover + label,
 .upload-table_btn:focus,
 .lang_btn:focus {
   outline: 1px solid blue;
@@ -926,7 +928,7 @@ summary {
 .lang_select-wrapper:focus,
 .tone_input:focus + label,
 .required-input:focus + label,
-.translate_input:focus + figure,
+.translate_input:focus + label,
 .upload-table_btn:focus,
 .lang_btn:focus {
   outline: 2px solid blue;
@@ -947,7 +949,7 @@ summary {
 }
 
 .tone_input:checked + label,
-.translate_input:checked + figure,
+.translate_input:checked + label,
 .required-input:checked + label {
   box-shadow: inset 0 0 0 6px #76a7e1;
   border-radius: 4px;
@@ -956,7 +958,7 @@ summary {
   transition: all 275ms ease-in-out;
 }
 
-.payment_input:valid + .payment_valid:after {
+.payment_input:focus:valid + .payment_valid:after {
   content: "\2714";
   background: #fff;
   color: #76a7e1;
@@ -977,7 +979,7 @@ summary {
   opacity: 0.7;
 }
 
-.payment__input::placeholder {
+.payment_input::placeholder {
   font-size: 15px;
   opacity: 0.7;
   color: #6e768f;
@@ -999,19 +1001,17 @@ summary {
 
 .required-input:checked + label:after {
   position: absolute;
-  top: -4px;
-  right: -6px;
+  top: -3px;
+  right: -4px;
   color: #76a7e1;
   font-size: 30px;
-  z-index: 2;
-  font-family: FontAwesome;
-  content: "\f058";
+  z-index: 1;
+  content: '\2611';
   background: #fff;
   line-height: 15px;
   width: 22px;
   height: 15px;
-  border-radius: 50%;
-}
+ }
 
 .payment-form_input_date::-webkit-inner-spin-button {
   display: none;
@@ -1020,12 +1020,19 @@ summary {
 
 .lang_btn {
   margin-left: 20px;
-  width: 60px;
+  width: 64px;
   height: 50px;
-}
+  white-space: nowrap;
+ }
 
 .lang_label {
   width: 38px;
+}
+
+ .lang_actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #lang_select_to_second {
@@ -1034,6 +1041,21 @@ summary {
 
 .lang_btn:first-child {
   margin-left: 52px;
+}
+
+.translate_input:checked + label:after {
+	top: -5px;
+    right: -6px;
+    content: '\2611';
+   	font-size: 30px;
+	background: #fff;
+	line-height: 15px;
+	width: 22px;
+	height: 15px;
+    color: #76a7e1;
+    position: absolute;
+    z-index: 1;
+    
 }
 
 @media screen and (max-width: 1200px) {
